<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HSPLocator$PlaceholderFragment"
    android:background="@android:color/background_dark"
    android:weightSum="1"
    android:id="@+id/mainLayout"
    android:clickable="false">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="false"
        android:clickable="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageLogo"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/hsplogo_text"
                android:contentDescription="@string/logo_alternative" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentStateLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/titleCurrentState"
                    android:id="@+id/titleState"
                    android:textColor="@android:color/background_light" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageCurrentState"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/imageStateAlt" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loading"
                android:id="@+id/textCurrentState"
                android:textColor="@android:color/background_light"
                android:layout_gravity="center_horizontal"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textCurrentInfo"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleCurrentChange"
                android:id="@+id/titleChange"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/background_light" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonInside"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/toggle_off"
                android:background="#00000000"
                android:contentDescription="@string/buttonInside_title"
                android:focusableInTouchMode="false" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoLayout"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_info"
                    android:id="@+id/titleNewInfo"
                    android:enabled="true"
                    android:textColor="@android:color/darker_gray"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/twitterEnable"
                    android:src="@drawable/tweet_disabled"
                    android:contentDescription="@string/enable_twitter"
                    android:layout_gravity="right"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/newInfoText"
                android:inputType="text"
                android:editable="false"
                android:clickable="false"
                android:enabled="true"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="15dp"
                android:autoText="true" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>